--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<title>Videowall</title>
 		<script type="text/javascript" src="http://code.jquery.com/jquery-2.0.0.min.js"></script>
-		<script type="text/javascript" src="scripts.js"></script>
-		<link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+		<script type="text/javascript" src="static/scripts.js"></script>
+		<link rel="stylesheet" type="text/css" media="screen" href="static/style.css" />
 	</head>
 	<body>
 		<canvas id="videoCanvas"></canvas>
