--- a/static/style.css
+++ b/static/style.css
@@ -1,19 +1,24 @@
 body {
-    background: black;
+    background: #ffffff;
+}
+
+video {
+  width: 250px;
+  height: 250px;
 }
 
 #videoCanvas {
-
+  width:100px;
+  height:100px;
+  border: 1px solid red;
 }
 
 #ownVideo {
-
+  border: 1px solid black;
 }
 
 #videoContainer {
-  margin: 2em auto 0;
-  width: 250px;
-  height: 250px;
+  margin: 2em 0;
   padding: 2em;
   background: white;
   -webkit-box-shadow: 0 1px 10px #D9D9D9;
