--- a/static/style.css
+++ b/static/style.css
@@ -3,27 +3,12 @@ body {
 }
 
 video {
-  width: 250px;
-  height: 250px;
+  width: 0;
+  height: 0;
 }
 
 #videoCanvas {
-  width:100px;
-  height:100px;
+  width:160px;
+  height:90px;
   border: 1px solid red;
-}
-
-#ownVideo {
-  border: 1px solid black;
-}
-
-#videoContainer {
-  margin: 2em 0;
-  padding: 2em;
-  background: white;
-  -webkit-box-shadow: 0 1px 10px #D9D9D9;
-  -moz-box-shadow: 0 1px 10px #D9D9D9;
-  -ms-box-shadow: 0 1px 10px #D9D9D9;
-  -o-box-shadow: 0 1px 10px #D9D9D9;
-  box-shadow: 0 1px 10px #D9D9D9;
 }
