moved js file to handle it like a template

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 		<title>Videowall</title>
 		<script type="text/javascript" src="http://code.jquery.com/jquery-2.0.0.min.js"></script>
 		<script type="text/javascript" src="/static/webrtc.io.js"></script>
-		<script type="text/javascript" src="/static/scripts.js"></script>
+		<script type="text/javascript" src="/js/scripts.js"></script>
 		<link rel="stylesheet" type="text/css" media="screen" href="/static/style.css" />
 	</head>
 	<body>
