--- a/templates/index.html
+++ b/templates/index.html
@@ -8,10 +8,10 @@
 		<link rel="stylesheet" type="text/css" media="screen" href="/static/style.css" />
 	</head>
 	<body>
-		<canvas id="ownCanvas"></canvas>
+{!-- 		<canvas id="ownCanvas"></canvas>
 		<video autoplay="autoplay" id="ownVideo" style="display:none;"></video>
 		<canvas id="remoteCanvas"></canvas>
-		<video id="remoteVideo" autoplay="autoplay" style="display:none;"></video>
+		<video id="remoteVideo" autoplay="autoplay" style="display:none;"></video> --}
 
 		<div id="localVideo"></div>
 		<div id="remotesVideos"></div>
