--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
-<html>
+<!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
+<!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
+<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
 	<head>
-		<title>Videowall</title>
+		<title>Videowalls for everyone by vall.me</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">	
 		<script type="text/javascript" src="http://code.jquery.com/jquery-2.0.0.min.js"></script>
 		<script src="http://simplewebrtc.com/latest.js"></script>
 		<script type="text/javascript" src="/js/scripts.js"></script>
-		<link rel="stylesheet" type="text/css" media="screen" href="/static/style.css" />
+		<link rel="stylesheet" href="/static/stylesheets/base.css">
+		<link rel="stylesheet" href="/static/stylesheets/skeleton.css">
+		<link rel="stylesheet" href="/static/stylesheets/layout.css">
+
+		<!--[if lt IE 9]>
+			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+		<![endif]-->
+
+		<link rel="shortcut icon" href="/images/favicon.ico">
+		<link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
+		<link rel="apple-touch-icon" sizes="72x72" href="/images/apple-touch-icon-72x72.png">
+		<link rel="apple-touch-icon" sizes="114x114" href="/images/apple-touch-icon-114x114.png">		
 	</head>
 	<body>
 		<div id="localVideo"></div>
