cleanup paths and references in index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,18 +9,18 @@
 		<script type="text/javascript" src="http://code.jquery.com/jquery-2.0.0.min.js"></script>
 		<script src="http://simplewebrtc.com/latest.js"></script>
 		<script type="text/javascript" src="/js/scripts.js"></script>
-		<link rel="stylesheet" href="/static/stylesheets/base.css">
-		<link rel="stylesheet" href="/static/stylesheets/skeleton.css">
-		<link rel="stylesheet" href="/static/stylesheets/layout.css">
+		<link rel="stylesheet" href="/static/css/base.css">
+		<link rel="stylesheet" href="/static/css/skeleton.css">
+		<link rel="stylesheet" href="/static/css/layout.css">
 
 		<!--[if lt IE 9]>
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
 
-		<link rel="shortcut icon" href="/images/favicon.ico">
-		<link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
-		<link rel="apple-touch-icon" sizes="72x72" href="/images/apple-touch-icon-72x72.png">
-		<link rel="apple-touch-icon" sizes="114x114" href="/images/apple-touch-icon-114x114.png">		
+		<link rel="shortcut icon" href="/static/img/favicon.ico">
+		<link rel="apple-touch-icon" href="/static/img/apple-touch-icon.png">
+		<link rel="apple-touch-icon" sizes="72x72" href="/static/img/apple-touch-icon-72x72.png">
+		<link rel="apple-touch-icon" sizes="114x114" href="/static/img/apple-touch-icon-114x114.png">		
 	</head>
 	<body>
 		<div id="localVideo"></div>
