Added template for frontpage Moved videowall template Adjusted handlers Made editable version of simplewebrtc lib

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,13 @@
+
 <!DOCTYPE html>
 <!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
 <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
 <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
 <!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
 	<head>
-		<title>Videowalls for everyone by vall.me</title>
+		<title>Plugin free videowalls in real-time with WebRTC for everyone by vall.me</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">	
 		<script type="text/javascript" src="http://code.jquery.com/jquery-2.0.0.min.js"></script>
-		<script src="http://simplewebrtc.com/latest.js"></script>
-		<script type="text/javascript" src="/js/scripts.js"></script>
 		<link rel="stylesheet" href="/static/css/base.css">
 		<link rel="stylesheet" href="/static/css/skeleton.css">
 		<link rel="stylesheet" href="/static/css/layout.css">
@@ -23,7 +22,15 @@
 		<link rel="apple-touch-icon" sizes="114x114" href="/static/img/apple-touch-icon-114x114.png">		
 	</head>
 	<body>
-		<div id="localVideo"></div>
-		<div id="remotesVideos"></div>
+		<div class="container">
+			<img src="/static/img/vall.png" alt="vall.me logo" />
+		</div>
+		<div class="container">
+			<div class="sixteen columns">
+				<h1>Free <strong>v</strong>ideow<strong>all</strong>s for everyone</h1>
+			</div>
+			<div class="three columns"><a href="/show" class="button">Join</a></div>
+			<div class="three columns"><a href="#" class="button">Create</a></div>
+		</div>
 	</body>
 </html>
