--- a/templates/videowall.html
+++ b/templates/videowall.html
@@ -24,7 +24,7 @@
 	</head>
 	<body>
 		<div class="container">
-			<img src="/static/img/vall.png" alt="vall.me logo" style="width:50px;" />
+			<a href="http://vall.me/"><img src="/static/img/vall.png" alt="vall.me logo" style="width:50px;" /></a>
 		</div>		
 		<div id="localVideo"></div>
 		<div id="remotesVideos"></div>
