Adjusting video sizes to window sizes and amount of videos

--- a/templates/videowall.html
+++ b/templates/videowall.html
@@ -25,8 +25,8 @@
 	<body>
 		<div class="container">
 			<a href="http://vall.me/"><img src="/static/img/vall.png" alt="vall.me logo" style="width:50px;" /></a>
+			<a href="#" class="button" id="joinButton">Join</a>
 		</div>		
-		<div id="localVideo"></div>
-		<div id="remotesVideos"></div>
+		<div id="videos"></div>
 	</body>
 </html>
