vall create logic and mongodb connection implemented

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,8 +29,12 @@
 			<div class="sixteen columns">
 				<h1>Free <strong>v</strong>ideow<strong>all</strong>s for everyone</h1>
 			</div>
-			<div class="three columns"><a href="/show" class="button">Join</a></div>
-			<div class="three columns"><a href="#" class="button">Create</a></div>
+			<div class="sixteen columns">
+				<form action="/" method="POST">
+					<input type="text" name="name">
+					<input type="submit" class="button" name="Join">
+				</form>
+			</div>
 		</div>
 	</body>
 </html>
