--- a/templates/videowall.html
+++ b/templates/videowall.html
@@ -8,7 +8,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">	
 		<script type="text/javascript" src="http://code.jquery.com/jquery-2.0.0.min.js"></script>
 		<script src="/static/js/simplewebrtc.js"></script>
-		<script type="text/javascript" src="/js/scripts.js"></script>
+		<script type="text/javascript" src="/{{ name }}/scripts.js"></script>
 		<link rel="stylesheet" href="/static/css/base.css">
 		<link rel="stylesheet" href="/static/css/skeleton.css">
 		<link rel="stylesheet" href="/static/css/layout.css">
