--- a/templates/index.html
+++ b/templates/index.html
@@ -8,29 +8,44 @@
 		<title>Plugin free videowalls in real-time with WebRTC for everyone by vall.me</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">	
 		<script type="text/javascript" src="http://code.jquery.com/jquery-2.0.0.min.js"></script>
-		<link rel="stylesheet" href="/static/css/base.css">
-		<link rel="stylesheet" href="/static/css/skeleton.css">
-		<link rel="stylesheet" href="/static/css/layout.css">
+		<link rel="stylesheet" href="../static/css/base.css">
+		<link rel="stylesheet" href="../static/css/skeleton.css">
+		<link rel="stylesheet" href="../static/css/layout.css">
 
 		<!--[if lt IE 9]>
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
 
-		<link rel="shortcut icon" href="/static/img/favicon.ico">
-		<link rel="apple-touch-icon" href="/static/img/apple-touch-icon.png">
-		<link rel="apple-touch-icon" sizes="72x72" href="/static/img/apple-touch-icon-72x72.png">
-		<link rel="apple-touch-icon" sizes="114x114" href="/static/img/apple-touch-icon-114x114.png">		
+		<link rel="shortcut icon" href="../static/img/favicon.ico">
+		<link rel="apple-touch-icon" href="../static/img/apple-touch-icon.png">
+		<link rel="apple-touch-icon" sizes="72x72" href="../static/img/apple-touch-icon-72x72.png">
+		<link rel="apple-touch-icon" sizes="114x114" href="../static/img/apple-touch-icon-114x114.png">		
 	</head>
 	<body>
 		<div class="container">
-			<a href="http://vall.me/"><img src="/static/img/vall.png" alt="vall.me logo" /></a>
+			<a href="http://vall.me/"><img src="../static/img/vall.png" alt="vall.me logo" /></a>
 		</div>
 		<div class="container">
-			<div class="sixteen columns">
-				<h1>Free <strong>v</strong>ideow<strong>all</strong>s for everyone</h1>
+			<div class="sixteen columns alpha">
+				<h1 class="subtitle">Free <strong>v</strong>ideow<strong>all</strong>s for everyone</h1>
 			</div>
-			<div class="three columns"><a href="/show" class="button">Join</a></div>
-			<div class="three columns"><a href="#" class="button">Create</a></div>
+		</div> <!-- end container -->
+		<div class="container conbutton">
+			<div class="sixteen columns alpha omega">
+				<div class="buttonc">
+					<a href="/show" class="vbutton" id="join">Go!</a>				
+				</div>
+			</div>
 		</div>
+
+		<footer class="">
+			<div class="sixteen columns alpha omega">
+				<div class="footer">
+					An <strong>Angelhack</strong> project.					
+				</div>
+			</div>
+		</footer>
+	
+		
 	</body>
 </html>
