change button text and added txmongo to requirements

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
 				<form action="/" method="POST">
 					<input type="text" name="name">
 					<div class="buttonc">
-						<input type="submit" class="vbutton" id="join" name="Go">
+						<input type="submit" class="vbutton" id="join" value="Go">
 					</div>
 				</form>
 			</div>
