--- a/templates/index.html
+++ b/templates/index.html
@@ -33,9 +33,9 @@
 		<div class="container conbutton">
 			<div class="sixteen columns alpha omega">
 				<form action="/" method="POST">
-					<input type="text" name="name">
 					<div class="buttonc">
-						<input type="submit" class="vbutton" id="join" value="Go">
+					<input type="text" name="name" placeholder="...enter your name">
+					<input type="submit" class="vbutton" id="join" value="Go!">
 					</div>
 				</form>
 			</div>
