--- a/templates/videowall.html
+++ b/templates/videowall.html
@@ -24,8 +24,7 @@
 	</head>
 	<body>
 		<div class="container">
-			<a href="http://vall.me/"><img src="/static/img/vall.png" alt="vall.me logo" style="width:50px;" /></a>
-			<a href="#" class="button" id="joinButton">Join</a>
+			<a href="http://www.vall.me/"><img src="/static/img/vall50.png" alt="vall.me logo" style="width:50px;" /></a>
 		</div>		
 		<div id="videos"></div>
 	</body>
