--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
 	</head>
 	<body>
 		<div class="container">
-			<a href="http://vall.me/"><img src="../static/img/vall.png" alt="vall.me logo" /></a>
+			<a href="http://www.vall.me/"><img src="../static/img/vall.png" alt="vall.me logo" /></a>
 		</div>
 		<div class="container">
 			<div class="sixteen columns alpha">
