input field looks awesome

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,19 +32,22 @@
 		</div> <!-- end container -->
 		<div class="container conbutton">
 			<div class="sixteen columns alpha omega">
+			<fieldset>
 				<form action="/" method="POST">
 					<div class="buttonc">
-					<input type="text" name="name" placeholder="...enter your name">
-					<input type="submit" class="vbutton" id="join" value="Go!">
+						<input type="text" class="vtext" name="name" placeholder="vall.me">
+						<input type="submit" class="vbutton" id="join" value="Go!">
 					</div>
-				</form>
+				</form>				
+			</fieldset>
+
 			</div>
 		</div>
 
 		<footer class="">
 			<div class="sixteen columns alpha omega">
 				<div class="footer">
-					An <strong>Angelhack</strong> project.				
+					An <strong><a href="http://www.hackathon.io/videowall" target="_blank">Angelhack</a></strong> project.				
 				</div>
 			</div>
 		</footer>
