--- a/static/css/base.css
+++ b/static/css/base.css
@@ -227,9 +227,9 @@
 		font: 13px 'Open Sans', Helvetica, Arial, sans-serif;;
 		color: #777;
 		margin: 0;
-		width: 210px;
+/*		width: 210px;
 		max-width: 100%;
-		display: block;
+		display: block; */
 		margin-bottom: 20px;
 		background: #fff; }
 	select {
