--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -248,7 +248,7 @@ remotecaption {
 	text-align: left;
 }
 
-.buttonc input[type="submit"] {
+input[type="submit"] {
 	color: #fff;
 	font-weight: 900;
 	font-size: 4em;
@@ -261,23 +261,66 @@ remotecaption {
 	
 }
 
-.buttonc input.vbutton:hover,
-.buttonc input.vbutton:active {
-	color: #dd1144;
-	-webkit-text-shadow: 0px 0px 16px rgba(221, 17, 68, 0.6);
-	-moz-text-shadow: 0px 0px 16px rgba(221, 17, 68, 0.6);
-	text-shadow: 0px 0px 16px rgba(221, 17, 68, 0.6);
+input.vtext {
+	padding: 28px;
+	font-size: 4em;
+	text-indent: 10px;
+	width: 70%;
+	margin-right: 1%;
+	border: none;
+	text-align: right;	
+	
+	-webkit-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
+	-moz-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
+	box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
 }
 
-.buttonc input.vbutton{
-	padding: 28px 4em;
+/*
+input::-webkit-input-placeholder {
+	color: rgba(0,0,0,.9);
+	font-family: ;
+}
+
+input::-moz-placeholder {
+	color: rgba(0,5,143,.5);
+	text-transform: uppercase;
+}
+
+
+input:-moz-placeholder {   /* Older versions of Firefox */ /*
+	color: rgba(0,5,143,.5);
+	text-transform: uppercase;
+} 
+input:-ms-input-placeholder { 
+	color: rgba(0,5,143,.5);
+	text-transform: uppercase;
+}	*/
+
+input.vtext:selected,
+input.vtext:active {
+	border: none;
+}
+
+input.vbutton {
+	padding: 28px 0;
 	color: #fff;
 	background: #141414;
+	width: 28%;
+	margin-left: 0%;
 	
 	-webkit-border-radius: 4px;
 	-moz-border-radius: 4px;
 	-ms-border-radius: 4px;
 	border-radius: 4px;
+}
+
+input.vbutton:hover,
+input.vbutton:active {
+	color: #dd1144;
+	background: #141414;
+	-webkit-text-shadow: 0px 0px 16px rgba(221, 17, 68, 0.6);
+	-moz-text-shadow: 0px 0px 16px rgba(221, 17, 68, 0.6);
+	text-shadow: 0px 0px 16px rgba(221, 17, 68, 0.6);
 }
 
 
@@ -286,4 +329,8 @@ footer {
 	position: absolute;
 	bottom: 4px;
 	right: 4px;
+}
+
+footer a {
+	text-decoration: none;
 }
