--- a/static/css/base.css
+++ b/static/css/base.css
@@ -228,8 +228,8 @@
 		color: #777;
 		margin: 0;
 /*		width: 210px;
-		max-width: 100%;
-		display: block; */
+*		max-width: 100%;
+*		display: block; */
 		margin-bottom: 20px;
 		background: #fff; }
 	select {
